레이아웃 완료:

--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,54 @@
 	<!--meta property="og:url" content="" /-->
 	<meta property="og:site_name" content="웹퍼블리셔 이주영" />
     <!-- CSS -->
-    <!-- <link rel="stylesheet" href="/assets/css/reset.css">
-    <link rel="stylesheet" href="/assets/css/cursor.css">
-    <link rel="stylesheet" href="/assets/css/style.css"> -->
+    <link rel="stylesheet" href="/assets/css/global.css">
 </head>
 <body>
-    <h1>Vite 시작하기</h1>
+    <div id="skip">
+        <div id="skip">
+            <a href="#header">헤더 영역 바로가기</a>
+            <a href="#visual">상단 영역 바로가기</a>
+            <a href="#about">소개 영역 바로가기</a>
+            <a href="#work">포트폴리오 영역 바로가기</a>
+            <a href="#skill">스킬 영역 바로가기</a>
+            <a href="#footer">푸터 영역 바로가기</a>
+        </div>
+    </div>
+    <!-- //skip -->
+
+    <header id="header" role="banner">
+        header
+    </header>
+    <!-- //header -->
+
+    <main id="main" role="main">
+        <section id="visual">
+            visual
+        </section>
+        <!-- //visual -->
+
+        <section id="about">
+            about
+        </section>
+        <!-- //intro -->
+
+        <section id="work">
+            work
+        </section>
+        <!-- //work -->
+    
+        <section id="skill">
+            skill
+        </section> 
+        <!-- //skill -->
+
+    </main>
+    <!-- //main -->
+
+    <footer id="footer" role="contentinfo">
+        footer
+    </footer>
+    <!-- //footer -->
     <script type="module" src="assets/js/main.js"></script>
 </body>
 </html>
