--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,6 @@
     <meta property="og:title" content="웹퍼블리셔 이주영 포트폴리오">
     <meta property="og:site_name" content="웹퍼블리셔 이주영">
     <meta property="og:description" content="인터렉티브 웹, 트렌디한 UXUI 구현 가능 웹 퍼블리셔 이주영입니다.">
-    <meta property="og:image"
-        content="https://yafitcdn.yanadoo.co.kr/yanadoo/images/web/championship/web/common/og_yafit_2.jpg">
     <!-- CSS -->
     
     
@@ -115,8 +113,8 @@
                     <div class="myWork__list__img">
                         <img src="/assets/work1-9a8c6bed.jpg" alt="">
                         <div class="myWork__list__btn">
-                            <a href="#"><i class="fa-solid fa-link"></i> SITE</a>
-                            <a href="https://github.com/lee-juyoung1160/portfolio2023_vite"><i class="fa-brands fa-github"></i> GIT</a>
+                            <a href="https://wondrous-lollipop-6df179.netlify.app/" target="_blank"><i class="fa-solid fa-link"></i> SITE</a>
+                            <a href="https://github.com/lee-juyoung1160/portfolio2023_vite" target="_blank"><i class="fa-brands fa-github"></i> GIT</a>
                         </div>
                     </div>
                     <div class="myWork__list__text">
