빌드 오류 수정중

--- a/src/index.html
+++ b/src/index.html
@@ -78,9 +78,10 @@
                         </p>
                     </div>
                     
-                    <lottie-player class="about__lottie fade_action fade_right"
+                    <div id="aboutLottie__01" class="about__lottie fade_action fade_right"></div>
+                    <!-- <lottie-player class="about__lottie fade_action fade_right"
                     src="/assets/images/about_ani_02.json"
-                    background="transparent" speed="1" loop autoplay></lottie-player>
+                    background="transparent" speed="1" loop autoplay></lottie-player> -->
                 </div>
                 <div class="about__text about__text__03">
                     <div class="fade_action fade_left">
@@ -89,10 +90,11 @@
                             동료들을 존중하는 협업과 의사소통을 선호합니다.<br>
                             효율적인 협업을 위해 항상 고민합니다.
                         </p>
-                    </div>                  
-                    <lottie-player class="about__lottie fade_action fade_right"
+                    </div>    
+                    <div id="aboutLottie__02" class="about__lottie fade_action fade_right"></div>              
+                    <!-- <lottie-player class="about__lottie fade_action fade_right"
                     src="/assets/images/about_ani_01.json"
-                    background="transparent" speed="1" loop autoplay></lottie-player>
+                    background="transparent" speed="1" loop autoplay></lottie-player> -->
                 </div>
             </div>
             <div class="about__tag">
@@ -327,7 +329,7 @@
         <div class="cursor__circle"></div>
     </div>
 
-    <script type="module" src="assets/js/common.js"></script>
+    <script type="module" src="assets/js/common.js" type="module"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.10.0/lottie.min.js"></script>
 </body>
