빌드오류수정중

--- a/src/index.html
+++ b/src/index.html
@@ -78,10 +78,10 @@
                         </p>
                     </div>
                     
-                    <div id="aboutLottie__01" class="about__lottie fade_action fade_right"></div>
-                    <!-- <lottie-player class="about__lottie fade_action fade_right"
-                    src="/assets/images/about_ani_02.json"
-                    background="transparent" speed="1" loop autoplay></lottie-player> -->
+                    <!-- <div id="aboutLottie__01" class="about__lottie fade_action fade_right"></div> -->
+                    <lottie-player class="about__lottie fade_action fade_right"
+                    src="/assets/js/lottie/about_ani_02.json"
+                    background="transparent" speed="1" loop autoplay></lottie-player>
                 </div>
                 <div class="about__text about__text__03">
                     <div class="fade_action fade_left">
@@ -91,10 +91,10 @@
                             효율적인 협업을 위해 항상 고민합니다.
                         </p>
                     </div>    
-                    <div id="aboutLottie__02" class="about__lottie fade_action fade_right"></div>              
-                    <!-- <lottie-player class="about__lottie fade_action fade_right"
-                    src="/assets/images/about_ani_01.json"
-                    background="transparent" speed="1" loop autoplay></lottie-player> -->
+                    <!-- <div id="aboutLottie__02" class="about__lottie fade_action fade_right"></div>               -->
+                    <lottie-player class="about__lottie fade_action fade_right"
+                    src="/assets/js/lottie/about_ani_01.json"
+                    background="transparent" speed="1" loop autoplay></lottie-player>
                 </div>
             </div>
             <div class="about__tag">
